  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

01/16/04 adam

	* implement a bunch of ultra-simple TriMesh functions that were
	in the headers but not in the code -- patch by
	Vadim Macagon <vadim_mcagon@hotmail.com>

12/01/03 adam

	* implement dxHashSpace::collide2(), not particularly efficiently.

11/14/03 adam

	* applied several Trimesh fixes and improvements from
	Aras Pranckevicius <nearaz@interamotion.com>

10/22/03 adam

	* apply Nguyen Binh's work for removing many dSetZero() calls
	and some other extraneous initializations.

07/29/03 martin

	* added dJointAdd*Torque/Force().

07/10/03 russ

	* added the StepFast code, by David Whittaker.

07/02/03 martin

	* added dMassSet*Total().

07/01/03 martin

	* added joint limits and motors to universal joints.

	* reversed the polarity of the dJOINT_REVERSE flag.

06/30/03 russ

	* added the TriMesh geom class and the quad tree space to the ODE
	  core. both of these were developed by Erwin de Vries. added OPCODE
	  to the ODE distribution, this is required by TriMesh.

06/23/03 martin

	* added dGeomSetQuaternion() and dGeomGetQuaternion()
	
	* added dJointGet*Anchor2()

05/07/03 russ

	* added dGeomGetSpace().

02/05/03 russ

	* added dMassSetCylinder().

12/07/02 russ

	* added dAreConnectedExcluding().

11/30/02 russ

	* added the ray geom class.

	* added the dGeomXXXPointDepth() functions.

	* added a collision test infrastructure, and some more tests.

11/24/02 russ

	* added support for multiple box-box contacts.

11/10/02 russ

	* added new collision system. select between the old/new system by
	  setting the ODE_OLD_COLLISION variable in config/user-settings.

10/28/02 russ

	* fixed two problems in the LCP code to improve the reliability of
	  the dContactApprox1 contact mode.

	* added a FAQ question about rolling bodies getting stuck when they
	  hit multiple geoms.
